--- a/Frontend/dashboardUI.ui
+++ b/Frontend/dashboardUI.ui
@@ -794,7 +794,7 @@ QPushButton:pressed {
              <item>
               <widget class="QStackedWidget" name="main_display_widget">
                <property name="currentIndex">
-                <number>3</number>
+                <number>5</number>
                </property>
                <widget class="QWidget" name="Account_setting_page">
                 <property name="styleSheet">
@@ -3316,6 +3316,34 @@ QFrame {
 }</string>
                 </property>
                 <layout class="QGridLayout" name="gridLayout_2">
+                 <item row="1" column="1">
+                  <widget class="QFrame" name="frame_8">
+                   <property name="minimumSize">
+                    <size>
+                     <width>300</width>
+                     <height>0</height>
+                    </size>
+                   </property>
+                   <property name="frameShape">
+                    <enum>QFrame::StyledPanel</enum>
+                   </property>
+                   <property name="frameShadow">
+                    <enum>QFrame::Raised</enum>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_31">
+                    <item>
+                     <widget class="QFrame" name="frame_14">
+                      <property name="frameShape">
+                       <enum>QFrame::StyledPanel</enum>
+                      </property>
+                      <property name="frameShadow">
+                       <enum>QFrame::Raised</enum>
+                      </property>
+                     </widget>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
                  <item row="1" column="0">
                   <widget class="QFrame" name="top_performing_product_frame">
                    <property name="styleSheet">
@@ -3434,7 +3462,7 @@ QFrame {
                      </widget>
                     </item>
                     <item>
-                     <widget class="QTableWidget" name="top_product_table">
+                     <widget class="QTableView" name="top_product_table">
                       <property name="maximumSize">
                        <size>
                         <width>16777209</width>
@@ -3446,23 +3474,20 @@ QFrame {
                    </layout>
                   </widget>
                  </item>
-                 <item row="1" column="1">
-                  <widget class="QFrame" name="frame_8">
-                   <property name="minimumSize">
-                    <size>
-                     <width>300</width>
-                     <height>0</height>
-                    </size>
-                   </property>
+                 <item row="0" column="1">
+                  <widget class="QFrame" name="chart_frame">
                    <property name="frameShape">
                     <enum>QFrame::StyledPanel</enum>
                    </property>
                    <property name="frameShadow">
                     <enum>QFrame::Raised</enum>
                    </property>
-                   <layout class="QVBoxLayout" name="verticalLayout_31">
+                   <layout class="QVBoxLayout" name="verticalLayout_30">
                     <item>
-                     <widget class="QFrame" name="frame_14">
+                     <widget class="QFrame" name="frame_13">
+                      <property name="cursor">
+                       <cursorShape>ArrowCursor</cursorShape>
+                      </property>
                       <property name="frameShape">
                        <enum>QFrame::StyledPanel</enum>
                       </property>
@@ -3767,31 +3792,6 @@ color: rgb(216, 216, 216);
                         </widget>
                        </item>
                       </layout>
-                     </widget>
-                    </item>
-                   </layout>
-                  </widget>
-                 </item>
-                 <item row="0" column="1">
-                  <widget class="QFrame" name="chart_frame">
-                   <property name="frameShape">
-                    <enum>QFrame::StyledPanel</enum>
-                   </property>
-                   <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                   </property>
-                   <layout class="QVBoxLayout" name="verticalLayout_30">
-                    <item>
-                     <widget class="QFrame" name="frame_13">
-                      <property name="cursor">
-                       <cursorShape>ArrowCursor</cursorShape>
-                      </property>
-                      <property name="frameShape">
-                       <enum>QFrame::StyledPanel</enum>
-                      </property>
-                      <property name="frameShadow">
-                       <enum>QFrame::Raised</enum>
-                      </property>
                      </widget>
                     </item>
                    </layout>
