--- a/Frontend/add_branch_and_product.ui
+++ b/Frontend/add_branch_and_product.ui
@@ -350,7 +350,7 @@ QPushButton {
    <item>
     <widget class="QStackedWidget" name="main_widget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="manage_branches">
       <property name="styleSheet">
@@ -724,7 +724,7 @@ background-color: rgb(255, 255, 255);
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_5">
           <item>
-           <widget class="QPushButton" name="update_and_add_button">
+           <widget class="QPushButton" name="branch_update_and_add_button">
             <property name="minimumSize">
              <size>
               <width>0</width>
