--- a/Frontend/dashboardUI.ui
+++ b/Frontend/dashboardUI.ui
@@ -208,7 +208,6 @@ QPushButton::hover {
                <property name="font">
                 <font>
                  <pointsize>10</pointsize>
-                 <weight>75</weight>
                  <bold>true</bold>
                 </font>
                </property>
@@ -794,7 +793,7 @@ QPushButton:pressed {
              <item>
               <widget class="QStackedWidget" name="main_display_widget">
                <property name="currentIndex">
-                <number>5</number>
+                <number>1</number>
                </property>
                <widget class="QWidget" name="Account_setting_page">
                 <property name="styleSheet">
@@ -818,7 +817,6 @@ QWidget#Account_setting_page {
                    <property name="font">
                     <font>
                      <pointsize>14</pointsize>
-                     <weight>75</weight>
                      <bold>true</bold>
                     </font>
                    </property>
@@ -914,7 +912,6 @@ QPushButton::pressed {
                          <property name="font">
                           <font>
                            <pointsize>9</pointsize>
-                           <weight>50</weight>
                            <bold>false</bold>
                           </font>
                          </property>
@@ -940,7 +937,6 @@ QPushButton::pressed {
                          <property name="font">
                           <font>
                            <pointsize>9</pointsize>
-                           <weight>50</weight>
                            <bold>false</bold>
                           </font>
                          </property>
@@ -999,7 +995,6 @@ QPushButton::pressed {
                           <property name="font">
                            <font>
                             <pointsize>11</pointsize>
-                            <weight>75</weight>
                             <bold>true</bold>
                            </font>
                           </property>
@@ -1271,8 +1266,7 @@ QTextEdit {
                                 </property>
                                 <property name="font">
                                  <font>
-                                  <weight>62</weight>
-                                  <bold>true</bold>
+                                  <bold>false</bold>
                                  </font>
                                 </property>
                                 <property name="text">
@@ -1319,10 +1313,13 @@ QTextEdit {
                                 </property>
                                 <property name="html">
                                  <string notr="true">&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+hr { height: 1px; border-width: 0; }
+li.unchecked::marker { content: &quot;\2610&quot;; }
+li.checked::marker { content: &quot;\2612&quot;; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'MS Shell Dlg 2'; font-size:10pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                                 </property>
                                 <property name="overwriteMode">
                                  <bool>false</bool>
@@ -1603,7 +1600,6 @@ p, li { white-space: pre-wrap; }
                           <property name="font">
                            <font>
                             <pointsize>11</pointsize>
-                            <weight>75</weight>
                             <bold>true</bold>
                            </font>
                           </property>
@@ -1734,7 +1730,6 @@ p, li { white-space: pre-wrap; }
                                    <property name="font">
                                     <font>
                                      <pointsize>12</pointsize>
-                                     <weight>75</weight>
                                      <bold>true</bold>
                                     </font>
                                    </property>
@@ -2229,26 +2224,6 @@ QFrame {
                   <string notr="true">background-color: rgb(255, 255, 255);</string>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_17">
-                  <item>
-                   <widget class="QFrame" name="frame_5">
-                    <property name="frameShape">
-                     <enum>QFrame::StyledPanel</enum>
-                    </property>
-                    <property name="frameShadow">
-                     <enum>QFrame::Raised</enum>
-                    </property>
-                   </widget>
-                  </item>
-                  <item>
-                   <widget class="QFrame" name="frame_9">
-                    <property name="frameShape">
-                     <enum>QFrame::StyledPanel</enum>
-                    </property>
-                    <property name="frameShadow">
-                     <enum>QFrame::Raised</enum>
-                    </property>
-                   </widget>
-                  </item>
                   <item>
                    <widget class="QFrame" name="frame_10">
                     <property name="frameShape">
@@ -2882,7 +2857,6 @@ QHeaderView::section {
                              <property name="font">
                               <font>
                                <pointsize>10</pointsize>
-                               <weight>75</weight>
                                <bold>true</bold>
                               </font>
                              </property>
@@ -3096,7 +3070,6 @@ QPushButton::pressed {
                                 <property name="font">
                                  <font>
                                   <pointsize>10</pointsize>
-                                  <weight>75</weight>
                                   <bold>true</bold>
                                  </font>
                                 </property>
@@ -3420,7 +3393,6 @@ QFrame {
                         <widget class="QLabel" name="Top_performing_product_label">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3436,7 +3408,6 @@ QFrame {
                         <widget class="QPushButton" name="export_word_btn">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3552,7 +3523,6 @@ QFrame {
                         <widget class="QLabel" name="total_revenue_label">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3565,8 +3535,7 @@ QFrame {
                         <widget class="QLabel" name="number_of_total_revenue_label">
                          <property name="font">
                           <font>
-                           <weight>62</weight>
-                           <bold>true</bold>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
@@ -3635,7 +3604,6 @@ QFrame {
                         <widget class="QLabel" name="top_branch_of_sale_label">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3648,8 +3616,7 @@ QFrame {
                         <widget class="QLabel" name="top_branch_label">
                          <property name="font">
                           <font>
-                           <weight>62</weight>
-                           <bold>true</bold>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
@@ -3698,7 +3665,6 @@ QFrame {
                         <widget class="QLabel" name="top_product_sale_label">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3714,8 +3680,7 @@ QFrame {
                         <widget class="QLabel" name="amount_product_sale_label">
                          <property name="font">
                           <font>
-                           <weight>62</weight>
-                           <bold>true</bold>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
@@ -3759,7 +3724,6 @@ color: rgb(216, 216, 216);
                         <widget class="QLabel" name="top_product_label">
                          <property name="font">
                           <font>
-                           <weight>99</weight>
                            <bold>true</bold>
                           </font>
                          </property>
@@ -3775,8 +3739,7 @@ color: rgb(216, 216, 216);
                         <widget class="QLabel" name="top_product_name_label">
                          <property name="font">
                           <font>
-                           <weight>62</weight>
-                           <bold>true</bold>
+                           <bold>false</bold>
                           </font>
                          </property>
                          <property name="text">
