--- a/Frontend/dashboardUI.ui
+++ b/Frontend/dashboardUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>813</width>
+    <width>810</width>
     <height>499</height>
    </rect>
   </property>
@@ -793,7 +793,7 @@ QPushButton:pressed {
              <item>
               <widget class="QStackedWidget" name="main_display_widget">
                <property name="currentIndex">
-                <number>1</number>
+                <number>3</number>
                </property>
                <widget class="QWidget" name="Account_setting_page">
                 <property name="styleSheet">
@@ -2225,7 +2225,27 @@ QFrame {
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_17">
                   <item>
-                   <widget class="QFrame" name="frame_revChart_1">
+                   <widget class="QFrame" name="frame_5">
+                    <property name="frameShape">
+                     <enum>QFrame::StyledPanel</enum>
+                    </property>
+                    <property name="frameShadow">
+                     <enum>QFrame::Raised</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QFrame" name="frame_revenue_chart1">
+                    <property name="frameShape">
+                     <enum>QFrame::StyledPanel</enum>
+                    </property>
+                    <property name="frameShadow">
+                     <enum>QFrame::Raised</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QFrame" name="frame_6">
                     <property name="frameShape">
                      <enum>QFrame::StyledPanel</enum>
                     </property>
@@ -2239,195 +2259,13 @@ QFrame {
                 <widget class="QWidget" name="widget_11" native="true">
                  <property name="geometry">
                   <rect>
-                   <x>0</x>
+                   <x>-10</x>
                    <y>200</y>
-                   <width>731</width>
-                   <height>241</height>
+                   <width>751</width>
+                   <height>251</height>
                   </rect>
                  </property>
                  <layout class="QHBoxLayout" name="horizontalLayout_16">
-                  <item>
-                   <widget class="QWidget" name="widget_13" native="true">
-                    <property name="styleSheet">
-                     <string notr="true">background-color: rgb(255, 255, 255);</string>
-                    </property>
-                    <widget class="QLabel" name="label">
-                     <property name="geometry">
-                      <rect>
-                       <x>8</x>
-                       <y>40</y>
-                       <width>71</width>
-                       <height>20</height>
-                      </rect>
-                     </property>
-                     <property name="text">
-                      <string>Revenue ID:</string>
-                     </property>
-                    </widget>
-                    <widget class="QLabel" name="label_2">
-                     <property name="geometry">
-                      <rect>
-                       <x>8</x>
-                       <y>70</y>
-                       <width>71</width>
-                       <height>20</height>
-                      </rect>
-                     </property>
-                     <property name="text">
-                      <string>Revnue Date:</string>
-                     </property>
-                    </widget>
-                    <widget class="QLabel" name="label_4">
-                     <property name="geometry">
-                      <rect>
-                       <x>8</x>
-                       <y>100</y>
-                       <width>81</width>
-                       <height>20</height>
-                      </rect>
-                     </property>
-                     <property name="text">
-                      <string>Amount:</string>
-                     </property>
-                    </widget>
-                    <widget class="QLabel" name="label_6">
-                     <property name="geometry">
-                      <rect>
-                       <x>8</x>
-                       <y>130</y>
-                       <width>71</width>
-                       <height>20</height>
-                      </rect>
-                     </property>
-                     <property name="text">
-                      <string>Branch ID: </string>
-                     </property>
-                    </widget>
-                    <widget class="QLineEdit" name="lineEdit_10">
-                     <property name="geometry">
-                      <rect>
-                       <x>80</x>
-                       <y>40</y>
-                       <width>201</width>
-                       <height>21</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">border: 2px solid black;
-border-radius: 5px;</string>
-                     </property>
-                    </widget>
-                    <widget class="QLineEdit" name="lineEdit_11">
-                     <property name="geometry">
-                      <rect>
-                       <x>80</x>
-                       <y>70</y>
-                       <width>201</width>
-                       <height>21</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">border: 2px solid black;
-border-radius: 5px;</string>
-                     </property>
-                    </widget>
-                    <widget class="QLineEdit" name="lineEdit_12">
-                     <property name="geometry">
-                      <rect>
-                       <x>80</x>
-                       <y>100</y>
-                       <width>201</width>
-                       <height>21</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">border: 2px solid black;
-border-radius: 5px;</string>
-                     </property>
-                    </widget>
-                    <widget class="QLineEdit" name="lineEdit_13">
-                     <property name="geometry">
-                      <rect>
-                       <x>80</x>
-                       <y>130</y>
-                       <width>201</width>
-                       <height>21</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">border: 2px solid black;
-border-radius: 5px;</string>
-                     </property>
-                    </widget>
-                    <widget class="QPushButton" name="pushButton">
-                     <property name="geometry">
-                      <rect>
-                       <x>60</x>
-                       <y>160</y>
-                       <width>75</width>
-                       <height>24</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">background-color: black;
-color: white;
-border-radius: 10px</string>
-                     </property>
-                     <property name="text">
-                      <string>Add</string>
-                     </property>
-                    </widget>
-                    <widget class="QPushButton" name="pushButton_2">
-                     <property name="geometry">
-                      <rect>
-                       <x>140</x>
-                       <y>160</y>
-                       <width>75</width>
-                       <height>24</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">background-color: black;
-color: white;
-border-radius: 10px</string>
-                     </property>
-                     <property name="text">
-                      <string>Remove</string>
-                     </property>
-                    </widget>
-                    <widget class="QPushButton" name="pushButton_3">
-                     <property name="geometry">
-                      <rect>
-                       <x>220</x>
-                       <y>160</y>
-                       <width>75</width>
-                       <height>24</height>
-                      </rect>
-                     </property>
-                     <property name="styleSheet">
-                      <string notr="true">background-color: black;
-color: white;
-border-radius: 10px</string>
-                     </property>
-                     <property name="text">
-                      <string>Update</string>
-                     </property>
-                    </widget>
-                    <widget class="QLabel" name="mangePS_label_2">
-                     <property name="geometry">
-                      <rect>
-                       <x>120</x>
-                       <y>10</y>
-                       <width>121</width>
-                       <height>16</height>
-                      </rect>
-                     </property>
-                     <property name="text">
-                      <string>Manage Revenue Info</string>
-                     </property>
-                    </widget>
-                   </widget>
-                  </item>
                   <item>
                    <widget class="QWidget" name="widget_12" native="true">
                     <property name="styleSheet">
@@ -2436,10 +2274,10 @@ border-radius: 10px</string>
                     <widget class="QTableView" name="revenue_data_table">
                      <property name="geometry">
                       <rect>
-                       <x>10</x>
-                       <y>11</y>
-                       <width>331</width>
-                       <height>181</height>
+                       <x>170</x>
+                       <y>21</y>
+                       <width>391</width>
+                       <height>201</height>
                       </rect>
                      </property>
                      <property name="styleSheet">
@@ -2818,7 +2656,7 @@ border-radius: 7px;</string>
                         <rect>
                          <x>0</x>
                          <y>0</y>
-                         <width>745</width>
+                         <width>742</width>
                          <height>445</height>
                         </rect>
                        </property>
@@ -3008,7 +2846,7 @@ QPushButton::pressed {
                                </widget>
                               </item>
                               <item>
-                               <widget class="QPushButton" name="branches_remove_btn">
+                               <widget class="QPushButton" name="branch_remove_btn">
                                 <property name="text">
                                  <string/>
                                 </property>
