--- a/Frontend/View/ui/login_resgister.ui
+++ b/Frontend/View/ui/login_resgister.ui
@@ -91,14 +91,20 @@
          </size>
         </property>
         <property name="styleSheet">
-         <string notr="true">#header::hover {
-        background: rgb(235, 235, 235);
-}
-#header {
+         <string notr="true">#header {
 	background-color: rgb(255, 255, 255);
+	border-bottom:  1px solid  rgb(173, 173, 173);
 }
 QFrame#interact {
 	background-color: rgb(255, 255, 255);
+}
+#Menu_Setting {
+	border: none;
+	padding: 3px;
+	border-radius: 2px;
+}
+#Menu_Setting:hover {
+	background-color: rgb(221, 221, 221);
 }</string>
         </property>
         <property name="frameShape">
@@ -123,6 +129,26 @@ QFrame#interact {
          <property name="bottomMargin">
           <number>0</number>
          </property>
+         <item>
+          <widget class="AnimatedButton" name="Menu_Setting">
+           <property name="cursor">
+            <cursorShape>PointingHandCursor</cursorShape>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../resource/resources.qrc">
+             <normaloff>:/icon/icons8_menu.svg</normaloff>:/icon/icons8_menu.svg</iconset>
+           </property>
+           <property name="iconSize">
+            <size>
+             <width>16</width>
+             <height>16</height>
+            </size>
+           </property>
+          </widget>
+         </item>
          <item>
           <spacer name="horizontalSpacer">
            <property name="orientation">
@@ -150,7 +176,7 @@ QFrame#interact {
            <property name="minimumSize">
             <size>
              <width>150</width>
-             <height>30</height>
+             <height>28</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -200,7 +226,7 @@ QPushButton::hover {
              <number>0</number>
             </property>
             <item>
-             <widget class="QPushButton" name="minimize_btn">
+             <widget class="AnimatedButton" name="minimize_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -210,7 +236,7 @@ QPushButton::hover {
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>28</height>
+                <height>27</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -229,7 +255,7 @@ QPushButton::hover {
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="maximize_btn">
+             <widget class="AnimatedButton" name="maximize_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -239,7 +265,7 @@ QPushButton::hover {
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>28</height>
+                <height>27</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -264,7 +290,7 @@ QPushButton::hover {
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="close_btn">
+             <widget class="AnimatedButton" name="close_btn">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -274,7 +300,7 @@ QPushButton::hover {
               <property name="minimumSize">
                <size>
                 <width>0</width>
-                <height>28</height>
+                <height>27</height>
                </size>
               </property>
               <property name="maximumSize">
@@ -306,6 +332,11 @@ QPushButton::hover {
       </item>
       <item>
        <widget class="QStackedWidget" name="Background">
+        <property name="font">
+         <font>
+          <family>Nirmala UI Semilight</family>
+         </font>
+        </property>
         <property name="styleSheet">
          <string notr="true">#Register_page {
         background: rgb(255, 255, 255);
@@ -453,7 +484,7 @@ QPushButton::hover {
                  <widget class="QLabel" name="main_text_label">
                   <property name="font">
                    <font>
-                    <family>Tw Cen MT Condensed Extra Bold</family>
+                    <family>Nirmala UI Semilight</family>
                     <pointsize>15</pointsize>
                    </font>
                   </property>
@@ -488,7 +519,11 @@ QPushButton::hover {
         margin: 2px;
         height: 35px;
         padding-left: 3px;
-		
+}
+QLineEdit:hover {
+		border: 2px solid rgb(34, 34, 34);
+        color :  rgb(0, 0, 0);
+        border-radius: 5px;
 }
 #DateOfBirth {
         margin: 2px;
@@ -499,6 +534,11 @@ QPushButton::hover {
         height: 35px;
         text-align: center;
         padding-left: 3px
+}
+#DOB:hover {
+		border: 1px solid rgb(34, 34, 34);
+        color :  rgb(0, 0, 0);
+        border-radius: 5px;
 }
 #text_frame {
 	background-color: rgb(255, 255, 255);
@@ -541,6 +581,11 @@ QPushButton::hover {
                  <height>35</height>
                 </size>
                </property>
+               <property name="font">
+                <font>
+                 <family>Nirmala UI Semilight</family>
+                </font>
+               </property>
                <property name="placeholderText">
                 <string>Enter user name</string>
                </property>
@@ -553,6 +598,11 @@ QPushButton::hover {
                  <width>0</width>
                  <height>35</height>
                 </size>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Nirmala UI Semilight</family>
+                </font>
                </property>
                <property name="dragEnabled">
                 <bool>false</bool>
@@ -569,6 +619,11 @@ QPushButton::hover {
                  <width>0</width>
                  <height>35</height>
                 </size>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Nirmala UI Semilight</family>
+                </font>
                </property>
                <property name="placeholderText">
                 <string>Enter phone number</string>
@@ -601,6 +656,11 @@ QPushButton::hover {
                 </property>
                 <item>
                  <widget class="QLineEdit" name="Enterprise_id">
+                  <property name="font">
+                   <font>
+                    <family>Nirmala UI Semilight</family>
+                   </font>
+                  </property>
                   <property name="placeholderText">
                    <string>Enter Enterprise ID</string>
                   </property>
@@ -608,6 +668,11 @@ QPushButton::hover {
                 </item>
                 <item>
                  <widget class="QLineEdit" name="enterprise_password_employer">
+                  <property name="font">
+                   <font>
+                    <family>Nirmala UI Semilight</family>
+                   </font>
+                  </property>
                   <property name="echoMode">
                    <enum>QLineEdit::Password</enum>
                   </property>
@@ -684,6 +749,11 @@ QDateEdit {
                     <height>16777215</height>
                    </size>
                   </property>
+                  <property name="font">
+                   <font>
+                    <family>Nirmala UI Semilight</family>
+                   </font>
+                  </property>
                   <property name="text">
                    <string>Enter date of birth</string>
                   </property>
@@ -693,7 +763,7 @@ QDateEdit {
                  <widget class="QDateEdit" name="DateOfBirth">
                   <property name="font">
                    <font>
-                    <family>MS Shell Dlg 2</family>
+                    <family>Nirmala UI Semilight</family>
                     <pointsize>10</pointsize>
                    </font>
                   </property>
@@ -737,6 +807,11 @@ QDateEdit {
                  <height>35</height>
                 </size>
                </property>
+               <property name="font">
+                <font>
+                 <family>Nirmala UI Semilight</family>
+                </font>
+               </property>
                <property name="echoMode">
                 <enum>QLineEdit::Password</enum>
                </property>
@@ -747,6 +822,11 @@ QDateEdit {
              </item>
              <item>
               <widget class="QLineEdit" name="Confirm_password">
+               <property name="font">
+                <font>
+                 <family>Nirmala UI Semilight</family>
+                </font>
+               </property>
                <property name="echoMode">
                 <enum>QLineEdit::Password</enum>
                </property>
@@ -769,6 +849,7 @@ QDateEdit {
 }
 #register_btn::hover {
 		color: rgb(54, 54, 54);
+		background-color: rgb(255, 255, 255);
 }
 
 #login_label {
@@ -833,7 +914,7 @@ QDateEdit {
                  <number>0</number>
                 </property>
                 <item>
-                 <widget class="QPushButton" name="register_btn">
+                 <widget class="AnimatedButton" name="register_btn">
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -1592,6 +1673,7 @@ QComboBox#business_type {
 }
 #create_enterprise_btn::hover {
         color: rgb(77, 77, 77);
+		background-color: rgb(255, 255, 255);
 }
 #goback_frame {
 		color:rgb(0, 0, 0);
@@ -1626,7 +1708,7 @@ QComboBox#business_type {
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_11">
                 <item>
-                 <widget class="QPushButton" name="create_enterprise_btn">
+                 <widget class="AnimatedButton" name="create_enterprise_btn">
                   <property name="minimumSize">
                    <size>
                     <width>0</width>
@@ -1686,6 +1768,11 @@ QComboBox#business_type {
    <class>ClickableLabel</class>
    <extends>QLabel</extends>
    <header>Frontend/View/component/clickableLabel</header>
+  </customwidget>
+  <customwidget>
+   <class>AnimatedButton</class>
+   <extends>QPushButton</extends>
+   <header>Frontend.View.component.AnimatedButton</header>
   </customwidget>
  </customwidgets>
  <resources>
