--- a/Frontend/View/ui/login_resgister.ui
+++ b/Frontend/View/ui/login_resgister.ui
@@ -130,7 +130,7 @@ QFrame#interact {
           <number>0</number>
          </property>
          <item>
-          <widget class="AnimatedButton" name="Menu_Setting">
+          <widget class="AnimatedButton" name="Menu_Button">
            <property name="cursor">
             <cursorShape>PointingHandCursor</cursorShape>
            </property>
@@ -343,7 +343,7 @@ QPushButton::hover {
 }</string>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="Register_page">
          <property name="styleSheet">
